--- a/css/design.css
+++ b/css/design.css
@@ -1,9 +1,17 @@
-.html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: "Roboto", sans-serif;
-  font-weight: 100;
+    margin: 0;
+   padding: 0;
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    overflow-x: hidden;
+}
+
+a {
+  width: 100%;
+  height: fit-content;
+  color: black;
+  text-decoration: none;
+  border-radius: 1.3rem;
 }
 
 .location {
@@ -64,7 +72,7 @@ body {
 
 .card_container {
   justify-self: center;
-  width: 94.5%;
+  width: 95.002%;
   height: fit-content;
   gap: 1.5rem;
   align-items: flex-start;
@@ -74,7 +82,7 @@ body {
 
 .footer {
   background-color: rgb(59, 59, 59);
-  width: 86%;
+  width: 86.349%;
   height: fit-content;
   align-items: flex-start;
   padding: 1.5rem 1.6rem 3rem 1.6rem;
@@ -82,7 +90,8 @@ body {
 }
 
 .menu_card {
-  background-color: aqua;
+  margin-top: 1rem;
+  background-color: white;
   width: 100%;
   height: 4.5rem;
   border-radius: 20px;
@@ -91,8 +100,53 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  animation: test 1s ease-in forwards;
 }
 
+.menu_card1 {
+  background-color: white;
+  width: 100%;
+  height: 4.5rem;
+  border-radius: 20px;
+  box-shadow: 0px 0px 7px 3px #e0dfdf;
+  flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  animation: test 1.1s ease-in forwards;
+}
+
+.menu_card2 {
+  background-color: white;
+  width: 100%;
+  height: 4.5rem;
+  border-radius: 20px;
+  box-shadow: 0px 0px 7px 3px #e0dfdf;
+  flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  animation: test 1.2s ease-in forwards;
+}
+
+.menu_card3 {
+  background-color: white;
+  width: 100%;
+  height: 4.5rem;
+  border-radius: 20px;
+  box-shadow: 0px 0px 7px 3px #e0dfdf;
+  flex-wrap: nowrap;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  animation: test 1.3s ease-in forwards;
+}
+
+.menu_container {
+gap: 1.5rem;
+  align-items: flex-start;
+  width: 100%;
+}
 .button {
   padding: 0rem 1.5rem;
   border-radius: 2rem;
@@ -133,7 +187,7 @@ body {
 }
 
 .mrg_card_top {
-  margin-top: 1%;
+  margin-top: -5%;
 }
 
 .mrg_card_left {
@@ -202,11 +256,12 @@ body {
   font-size: 1.8rem;
   margin-left: 77%;
   margin-top: -10.5%;
+  width: fit-content;
 }
 
 .heart_menu {
   margin-left: 79% !important;
-  margin-top: 0% !important;
+  margin-top: -0% !important;
 }
 
 .logo {
@@ -230,6 +285,10 @@ body {
   margin-left: 65%;
   margin-top: 3.5%;
   color: #29927a;
+}
+
+.hidden {
+  visibility: hidden;
 }
 
 .fs_bold {
@@ -285,7 +344,6 @@ body {
   border-radius: 2rem 2rem 0rem 0rem;
   margin-top: -14%;
   z-index: 4;
-  width: 94.5%;
   padding-bottom: 25%;
 }
 
@@ -322,6 +380,16 @@ body {
 }
 
 .menu_card:hover .slidegreen {
+  animation: slidetest 0.5s forwards;
+}
+
+.menu_card1:hover .slidegreen {
+  animation: slidetest 0.5s forwards;
+}
+.menu_card2:hover .slidegreen {
+  animation: slidetest 0.5s forwards;
+}
+.menu_card3:hover .slidegreen {
   animation: slidetest 0.5s forwards;
 }
 
@@ -377,6 +445,18 @@ body {
   animation: rotation 0.5s forwards;
   visibility: visible;
 }
+.menu_card1:hover .fas.fa-check-circle {
+  animation: rotation 0.5s forwards;
+  visibility: visible;
+}
+.menu_card2:hover .fas.fa-check-circle {
+  animation: rotation 0.5s forwards;
+  visibility: visible;
+}
+.menu_card3:hover .fas.fa-check-circle {
+  animation: rotation 0.5s forwards;
+  visibility: visible;
+}
 
 .pdg_top {
   padding-top: 0.3rem;
@@ -385,6 +465,7 @@ body {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 @keyframes slidetest {
   100% {
     width: 30%;
@@ -405,4 +486,16 @@ body {
   visibility: visible;
 }
 
+@keyframes test {
+
+  0% {
+      opacity: 0;
+  }
+
+  100% {
+transform: translateY(-30%);
+opacity: 1;
+
+  }   
+}
 /*# sourceMappingURL=design.css.map */
