--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -37,6 +37,7 @@ $fs_smallbold: 1rem;
 $fs_normal: 1.2rem;
 $fs_largebold: 1.7rem;
 $fs_reset: 1rem;
+$fs_largelogo: 2rem;
 
 @mixin ellipsis {
     overflow: hidden;
