--- a/css/design_desktop.css
+++ b/css/design_desktop.css
@@ -4,10 +4,6 @@
     padding: 0;
     margin: 0;
   }
-  *:not(.footer_container) {
-    max-width: 1280px;
-    margin: auto;
-  }
   .footer {
     position: relative;
     background-color: #3b3b3b;
@@ -24,12 +20,70 @@
     -webkit-box-direction: normal !important;
         -ms-flex-direction: row !important;
             flex-direction: row !important;
+    max-width: 1280px;
+    margin: auto;
   }
   .menu_card {
     background-color: white;
-    width: 30%;
-    height: 4rem;
+    width: 20rem !important;
+    height: 4.5rem;
     border-radius: 20px;
+  }
+  .menu_card1 {
+    background-color: white;
+    width: 20rem !important;
+    height: 4.5rem;
+    border-radius: 20px;
+  }
+  .menu_card2 {
+    background-color: white;
+    width: 20rem !important;
+    height: 4.5rem;
+    border-radius: 20px;
+  }
+  .menu_card3 {
+    background-color: white;
+    width: 20rem !important;
+    height: 4.5rem;
+    border-radius: 20px;
+  }
+  .menu_container1 {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+  }
+  .menu_container2 {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    -ms-grid-row: 1;
+        grid-row-start: 1;
+  }
+  .menu_container3 {
+    -ms-grid-column: 1;
+        grid-column-start: 1;
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+  }
+  .menu_container3_span {
+    -ms-grid-column-span: 2;
+        grid-column-end: span 2;
+  }
+  .menu_container4 {
+    -ms-grid-column: 2;
+        grid-column-start: 2;
+    -ms-grid-row: 2;
+        grid-row-start: 2;
+  }
+  .btn_container {
+    -ms-grid-column-span: 2;
+        grid-column-end: span 2;
+    margin-top: unset;
+  }
+  .absolute_title {
+    position: absolute;
+    top: 5rem !important;
+    left: 40% !important;
   }
   .flex {
     -webkit-box-align: start;
@@ -39,6 +93,15 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
+  }
+  .center {
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+    -webkit-box-orient: vertical !important;
+    -webkit-box-direction: normal !important;
+        -ms-flex-direction: column !important;
+            flex-direction: column !important;
   }
   .reservation {
     width: 40%;
@@ -57,6 +120,13 @@
     margin: unset;
     padding-top: 3.5rem;
   }
+  .reservation_container {
+    max-width: 1280px;
+    margin: auto;
+  }
+  .button {
+    margin-top: 7rem;
+  }
   .location {
     width: 20%;
     background-color: white;
@@ -71,20 +141,35 @@
   }
   .fas.fa-map-marker-alt {
     position: absolute;
-    left: 10%;
+    left: -10%;
   }
-  .brd_bottom {
+  .brd_bottom1 {
     border-bottom: 0.2rem solid #3b3b3b;
-    width: 50%;
+    width: 6.5rem;
+    position: absolute;
+    top: 4rem !important;
+    left: 4rem;
   }
   .absolute {
     position: absolute;
-    top: 8rem;
+    top: 2rem;
+  }
+  .ohmyfood_container {
+    width: 100%;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    text-align: center !important;
+    position: absolute;
+    top: 1rem;
   }
   .card {
     height: 15rem !important;
   }
   .new {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 5.5rem;
     height: 1.5rem;
     right: 0.5rem;
@@ -93,6 +178,9 @@
     position: relative;
     background-position-y: 0rem;
     background-size: 112%;
+  }
+  .fas.fa-arrow-left {
+    visibility: hidden;
   }
   .img_gout {
     background-image: url(/images/restaurants/gout.jpg);
@@ -148,6 +236,18 @@
         -ms-flex-pack: none;
             justify-content: none;
   }
+  .img_menu {
+    height: 20rem !important;
+    max-width: 1280px !important;
+    margin: auto !important;
+  }
+  .img_menu_container {
+    width: 100% !important;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
+    background-color: black !important;
+  }
   .ellipsis {
     position: absolute;
     text-overflow: unset;
@@ -162,21 +262,51 @@
   .white {
     margin: unset;
   }
+  .footer_items {
+    margin-left: 5rem !important;
+    white-space: nowrap;
+  }
   .card_container {
-    position: relative;
+    max-width: 1280px !important;
+    margin: auto !important;
   }
-  .container_card {
-    margin: unset !important;
-    margin: none;
+  .card_container_menu {
+    padding: 10rem 2.5%;
+    max-width: 1100 !important;
+    width: 80%;
   }
-  .logo_container {
-    margin: none !important;
-    margin: unset !important;
-    max-width: unset !important;
+  .card_container_index {
+    height: 0rem !important;
+    max-height: 0rem;
+    padding: 12.5rem 2.5%;
   }
   .footer_container {
+    background-color: #3b3b3b;
     width: 100%;
-    margin: unset !important;
+  }
+  .menu_border {
+    border-radius: 2rem;
+  }
+  .grid {
+    display: -ms-grid !important;
+    display: grid !important;
+    -ms-grid-columns: 50% 50% !important;
+        grid-template-columns: 50% 50% !important;
+    grid-row: 50% 50% !important;
+    margin-top: 4rem !important;
+    margin-bottom: 4rem !important;
+    padding-bottom: 5rem !important;
+  }
+  .logo {
+    background-color: black;
+  }
+  .img_ohmyfood {
+    background-color: white;
+  }
+  .fs_largelogo {
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
   }
 }
 /*# sourceMappingURL=design_desktop.css.map */
