--- a/sass/main.css
+++ b/sass/main.css
@@ -91,6 +91,11 @@ a {
   gap: 0.5rem;
 }
 
+.reservation_container {
+  -webkit-animation: visible 3s ease-in forwards;
+          animation: visible 3s ease-in forwards;
+}
+
 .flex {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -123,6 +128,8 @@ a {
 }
 
 .fonctionnement {
+  -webkit-animation: visible 3s ease-in forwards;
+          animation: visible 3s ease-in forwards;
   width: 88% !important;
   height: -webkit-fit-content !important;
   height: -moz-fit-content !important;
@@ -213,6 +220,8 @@ a {
   height: 67vw !important;
   border-radius: 1.3rem;
   background-color: white;
+  -webkit-box-shadow: 0px 0px 7px 3px #e0dfdf;
+          box-shadow: 0px 0px 7px 3px #e0dfdf;
 }
 
 .card_container {
@@ -226,6 +235,7 @@ a {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
+  position: relative;
   padding: 20% 2.5%;
   background-color: #f2f2f2;
 }
@@ -245,6 +255,11 @@ a {
           flex-direction: column !important;
   padding: 1.5rem 1.6rem 3rem 1.6rem;
   gap: 0.5rem;
+}
+
+.footer_container {
+  background-color: #3b3b3b;
+  width: 100%;
 }
 
 @media all and (max-width: 1280px) {
@@ -416,6 +431,14 @@ a {
   border-style: none;
   color: white;
   margin-top: 10vw;
+  -webkit-box-shadow: 0px 6px 6px 2px #e0dfdf;
+          box-shadow: 0px 6px 6px 2px #e0dfdf;
+}
+
+.button:hover {
+  opacity: 80%;
+  -webkit-box-shadow: 0px 8px 7px 3px #e0dfdf;
+          box-shadow: 0px 8px 7px 3px #e0dfdf;
 }
 
 .fs_smallbold {
@@ -535,6 +558,8 @@ a {
 }
 
 .logo {
+  -webkit-animation: visible 3s ease-in forwards;
+          animation: visible 3s ease-in forwards;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -546,6 +571,12 @@ a {
   width: 25%;
   height: 1.5rem;
   color: white;
+}
+
+.fs_largelogo {
+  font-size: 2rem;
+  font-weight: 700;
+  color: black;
 }
 
 .new {
@@ -725,11 +756,21 @@ a {
 }
 
 .container_card {
+  -webkit-animation: visible 3s ease-in forwards;
+          animation: visible 3s ease-in forwards;
   width: 100% !important;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   background-color: #f2f2f2;
+}
+
+.img_menu_container {
+  width: 100% !important;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: black !important;
 }
 
 .logo_container {
@@ -740,6 +781,8 @@ a {
 }
 
 .footer_container {
+  -webkit-animation: visible 3s ease-in forwards;
+          animation: visible 3s ease-in forwards;
   width: 100%;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -801,5 +844,111 @@ a {
             transform: translateY(-30%);
     opacity: 1;
   }
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+@-webkit-keyframes visible {
+  0% {
+    opacity: 0;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes visible {
+  0% {
+    opacity: 0;
+  }
+  99% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes visiblespinner {
+  0% {
+    visibility: visible;
+  }
+  99% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+@keyframes visiblespinner {
+  0% {
+    visibility: visible;
+  }
+  99% {
+    visibility: visible;
+  }
+  100% {
+    visibility: hidden;
+  }
+}
+
+html {
+  z-index: 100;
+  background-color: white;
+}
+
+.loading_spinner {
+  width: 4rem;
+  height: 4rem;
+  top: 50vh;
+  left: 40vw;
+  position: relative;
+}
+
+.loader_quart {
+  border-radius: 4rem;
+  border: 0.5rem solid rgba(255, 255, 255, 0.4);
+  -webkit-animation: visiblespinner 3s ease-in forwards;
+          animation: visiblespinner 3s ease-in forwards;
+}
+
+.loader_quart::after {
+  content: "";
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  top: -0.5rem;
+  left: -0.5rem;
+  bottom: -0.5rem;
+  right: -0.5rem;
+  border: 0.5rem solid rgba(242, 242, 242, 0.4);
+  border-top-color: black;
+  border-radius: 4rem;
+  -webkit-animation: spin 1s linear infinite;
+          animation: spin 1s linear infinite;
 }
 /*# sourceMappingURL=main.css.map */
