modification responsive tablet + tag html5

--- a/css/design_desktop.css
+++ b/css/design_desktop.css
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 @media screen and (min-width: 1024px) {
-  .html, body {
-    padding: 0;
-    margin: 0;
+  html, body {
+    padding: 0  !important;
+    margin: 0 !important;
+    height: 100vh;
   }
   .footer {
     position: relative;
@@ -80,6 +81,9 @@
         grid-column-end: span 2;
     margin-top: unset;
   }
+  .mrg_top_menu_container {
+    margin-top: 6rem !important;
+  }
   .absolute_title {
     position: absolute;
     top: 5rem !important;
@@ -138,6 +142,11 @@
             justify-content: flex-start !important;
     margin: unset;
     position: relative;
+  }
+  .container_card {
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
+    height: fit-content;
   }
   .fas.fa-map-marker-alt {
     position: absolute;
@@ -267,6 +276,9 @@
     white-space: nowrap;
   }
   .card_container {
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
     max-width: 1280px !important;
     margin: auto !important;
   }
@@ -307,6 +319,9 @@
     font-size: 2rem;
     font-weight: 700;
     color: white;
+  }
+  .card {
+    width: 100% !important;
   }
 }
 /*# sourceMappingURL=design_desktop.css.map */
