--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -38,6 +38,7 @@ $fs_normal: 1.2rem;
 $fs_largebold: 1.7rem;
 $fs_reset: 1rem;
 $fs_largelogo: 2rem;
+$fs_small: 0.9rem;
 
 @mixin ellipsis {
     overflow: hidden;
