--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,13 @@
 @import "./variables";
 
+
+h1,h2,h3,h4 {
+  font-size: unset;
+  font-weight: unset;
+  margin: 0;
+  padding: 0;
+}
+
 .svg-inline--fa.fa-heart.fa-w-16 {
   background-color: $light-grey;
   width: 2rem;
@@ -68,7 +76,7 @@ a {
 }
 
 .reservation {
-  width: 74%;
+  width: 100%;
   background-color: $light-grey;
   padding: 3rem 3.1rem;
   gap: 0.5rem;
@@ -189,7 +197,7 @@ position: relative;
 
 .footer {
   background-color: $dark-grey;
-  width: 86.349%;
+  width: 86.349% !important;
   height: fit-content;
   align-items: flex-start !important;
   flex-direction: column !important;
@@ -225,6 +233,7 @@ position: relative;
   &:hover .fas.fa-check-circle {
     animation: rotation 0.5s forwards;
     visibility: visible;
+
   }
 
   &1 {
@@ -266,6 +275,30 @@ position: relative;
       visibility: visible;
     }
   }
+
+  &_provence {
+
+    margin-top: 1rem;
+    background-color: $white;
+    width: 100%;
+    height: 6rem;
+    border-radius: 20px;
+    box-shadow: 0px 0px 7px 3px $grey-box;
+    flex-wrap: nowrap;
+    display: flex;
+    flex-direction: row ;
+    justify-content: space-between; 
+    
+    &:hover .slidegreen {
+      animation: slidetest 0.5s forwards;
+    }
+  
+    &:hover .fas.fa-check-circle {
+      animation: rotation 0.5s forwards;
+      visibility: visible;
+  
+    }
+  }  
 }
 
 .menu_container {
@@ -295,6 +328,9 @@ position: relative;
   font-weight: $fw_smallbold;
 }
 
+.fs_small {
+  font-size: $fs_small;
+}
 .fs_normal {
   font-size: $fs_normal;
   font-weight: $fw_normal;
@@ -576,7 +612,7 @@ position: relative;
   background-color: black !important;
 }
 .logo_container {
-  width: 100%;
+  width: 100% !important;
   height: fit-content;
 }
 
@@ -655,9 +691,12 @@ position: relative;
 }
 
 
-html {
+html,body {
 z-index: 100;
   background-color: $white;
+  margin: 0 !important;
+  padding: 0 !important;
+  
   
 }
 
